bdr.BDR.scala.error
Compilation error:
BDR:1: error: unclosed character literal
while (readMessage!='') {
                    ^BDR:1: error: ')' expected but something found.
while (readMessage!='') {
                    ^BDR:42: error: illegal start of simple expression
	}
        ^